cambios en index

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                      <ul>
                          <li> <a href="index.html"> Home</a></li>
                           <li> <a href="pages/Nosotros.html">Nosotros</a></li>
-                         <li><a href="pages/Talleres.html">Talleres</a></li>
-                         <li><a href="pages/Contacto.html">Contacto</a></li>
+                         <li><a href="pages/talleres.html">Talleres</a></li>
+                         <li><a href="pages/contacto.html">Contacto</a></li>
                          <li><a href="pages/musica.html">Musica</a></li>
                       
                         
