mas pararrafo en index rama dos

--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
             <h2> Clases prácticas para la Voz Cantada</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dignissimos accusamus eveniet consequuntur quos saepe accusantium exercitationem officiis dicta aliquid! Aut id perspiciatis nihil voluptatum voluptatem nobis neque necessitatibus nostrum!</p>
         </div>
+        <p>lorem rama 2lhñlHQÑLYRÑOyt   t</p>
 
         <div class="main__hijoimagen">
             <img src="img/billie.jpg" alt="gafitti de cantante">
         </div>
      </main>
 
+     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod ullam, saepe a accusantium pariatur nulla dolores illo iure quis, at, animi ipsa facilis nostrum quasi possimus architecto perspiciatis fuga necessitatibus.</p>
      <!--footer hijo div de copyrigth-->
      <footer class="footerdefinitivo">   
         <div>
